--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -35,7 +35,7 @@
                   <% end %>
 
                   <%= link_to  '/projects', "data-toggle": "tooltip", "data-placement": "bottom",title: "Proyectos" do %>
-                      <span class="glyphicon glyphicon-file"></span>
+                      <span class="glyphicon glyphicon-send"></span>
                   <% end %>
 
                   <%= link_to milestones_path, "data-toggle": "tooltip", "data-placement": "bottom",title: "Hitos" do %>
