--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -533,9 +533,17 @@ ul#milestone-list {
             }
         }
 
+        /*.resources-list {
+            background-color: $peterriver;
+            margin-top: 10px;
+        }*/
         .resources-list {
             background-color: $peterriver;
             margin-top: 10px;
+            ul {
+                list-style:disc;
+            }
+
         }
 
         .notes-list {
