--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -98,7 +98,7 @@
 
 #profile-card {
 
-    h1, h2 {
+    h1 {
         text-transform: capitalize;
     }
 
@@ -542,6 +542,7 @@ ul#milestone-list {
             margin-top: 10px;
             ul {
                 list-style:disc;
+                margin-left: 10px;
             }
 
         }
