--- a/app/views/people/new.html.erb
+++ b/app/views/people/new.html.erb
@@ -20,7 +20,7 @@
           <div class="form-group">
             <%= f.label t('people.new.role'), class: "small_label" %>
             <br>
-            <%= select_tag(:tech_role_id, options_from_collection_for_select(@roles, :id, :name), :include_blank=>true, :multiple => false, class: "chosen", 'data-placeholder'=> t('people.add_tech_role'), 'style'=> 'width:100%') %>
+            <%= f.select :tech_role_id, options_from_collection_for_select(@roles, :id, :name), {:include_blank => true}, {class: "chosen", 'data-placeholder'=> t('people.add_tech_role'), 'data-validation': 'required'}%>
           </div>
 
           <div class="row">
