--- a/app/assets/stylesheets/_cards.scss.erb
+++ b/app/assets/stylesheets/_cards.scss.erb
@@ -77,7 +77,7 @@
         color: #2a2a2a;
 
         &:after {
-            content: "\e080";
+            //content: "\e080";
             display: inline-block;
             font-family: "Glyphicons Halflings";
             transform: rotate(0deg);
