Arreglado diseño de edit y new de categorías

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -11,7 +11,7 @@
               <% end %>
           <%= t('categories.header') %>
         </h1>
-        <table class="table">
+        <table class="table datatable" data-info="false">
           <thead>
           <tr>
             <td></td>
