--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,27 +1,31 @@
+
 <div class="container">
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
-    <h1><span class="glyphicon glyphicon-list"></span> <%= t('categories.new.header') %></h1>
 
-    <%= form_for([@category]) do |c| %>
-        <div class="form-group">
-          <%= c.label t('categories.name'), class: "control-label" %>
-          <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
-        </div>
+      <%= form_for :category, html: { class:'timeline-form main-form ','data-toggle': 'validator'}  do |c| %>
+          <h1 class=""><span class="glyphicon glyphicon-list"></span> <%= t('categories.new.header') %></h1>
 
+          <div class="form-slide">
 
-          <div class="row">
-            <div class="form-group col-xs-6">
-              <%=  c.label t('categories.icon'), class: "control-label" %>
-              <button name="category[icon]" class="btn btn-default" role="iconpicker"></button>
+            <div class="form-group">
+
+              <%= c.label t('categories.name'), class: "control-label" %>
+              <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
             </div>
+
+            <div class="row">
+              <div class="form-group col-xs-6">
+                <%=  c.label t('categories.icon'), class: "control-label" %>
+                <button name="category[icon]" class="btn btn-default" role="iconpicker"></button>
+              </div>
+            </div>
+
+            <%= c.hidden_field(:created_at, :value =>Time.now) %>
+            <%= c.hidden_field(:updated_at, :value =>Time.now) %>
+            <%= c.button t('categories.new.submit'), :type => 'submit', class: "btn btn-default" %>
           </div>
-
-        <%= c.hidden_field(:created_at, :value =>Time.now) %>
-        <%= c.hidden_field(:updated_at, :value =>Time.now) %>
-
-        <%= c.button t('categories.new.submit'), :type => 'submit', class: "btn btn-default" %>
-     </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
 </div>
