Arreglado bug en crear categoría

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -3,7 +3,7 @@
   <div class="row">
     <div class="card-col col-xs-4 col-xs-offset-4">
 
-      <%= form_for :category, html: { class:'timeline-form main-form ','data-toggle': 'validator'}  do |c| %>
+      <%= form_for @category, html: { class:'timeline-form main-form ','data-toggle': 'validator'}  do |c| %>
           <h1 class=""><span class="glyphicon glyphicon-list"></span> <%= t('categories.new.header') %></h1>
 
           <div class="form-slide">
