--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -15,12 +15,26 @@
               <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
             </div>
 
+            <div class="form-group">
+
+              <%= c.label t('categories.doc_url'), class: "control-label" %>
+              <%= c.text_field :doc_url, class: "form-control", 'data-validation':"required" %>
+            </div>
+
             <div class="row">
               <div class="form-group col-xs-6">
                 <%=  c.label t('categories.icon'), class: "control-label" %>
                 <button name="category[icon]" class="btn btn-default" role="iconpicker" data-icon="<%= @category.icon %>"></button>
               </div>
             </div>
+
+            <div class="row">
+              <div class="form-group col-xs-6">
+                <%=  c.label t('categories.feedback'), class: "control-label" %>
+                <%=  c.check_box :is_feedback, {:checked=> @category.is_feedback}, class: "" %>
+              </div>
+            </div>
+
 
             <%= c.hidden_field(:updated_at, :value =>Time.now) %>
             <%= c.button t('categories.edit.submit'), :type => 'submit', class: "btn btn-default" %>
