--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -14,10 +14,23 @@
               <%= c.text_field :name, class: "form-control", 'data-validation':"required" %>
             </div>
 
+            <div class="form-group">
+
+              <%= c.label t('categories.doc_url'), class: "control-label" %>
+              <%= c.text_field :doc_url, class: "form-control", 'data-validation':"required" %>
+            </div>
+
             <div class="row">
               <div class="form-group col-xs-6">
                 <%=  c.label t('categories.icon'), class: "control-label" %>
                 <button name="category[icon]" class="btn btn-default" role="iconpicker"></button>
+              </div>
+            </div>
+
+            <div class="row">
+              <div class="form-group col-xs-6">
+                <%=  c.label t('categories.feedback'), class: "control-label" %>
+                <%=  c.check_box :is_feedback, class: "" %>
               </div>
             </div>
 
