--- a/app/views/templates/_innerform.erb
+++ b/app/views/templates/_innerform.erb
@@ -13,6 +13,20 @@
         <%= m.text_area :description, class: "form-control", 'data-validation':"required" %>
       </div>
 
+      <div class="form-group">
+        <%= m.label t(:documenturl), class: "control-label" %>
+        <% if params[:error] %>
+            <div id="div" class="form-group has-error">
+        <% else %>
+            <div id="div" class="form-group">
+        <% end %>
+        <%= m.text_field :doc_url, class: "form-control", 'data-validation':"required" %>
+        <% if params[:error] %>
+            <span id="msj" class="help-block form-error"><%= t(:invalidurl) %></span>
+        <% end %>
+        </div>
+        </div>
+
       <div class="row">
         <div class="form-group col-xs-6">
           <%=  m.label t('icon'), class: "control-label" %>
@@ -42,3 +56,16 @@
       <%= m.hidden_field(:updated_at, :value=>Time.now) %>
       <%= m.button t('templates.new.submit'), :type => 'submit', class: "btn btn-default" %>
 </div>
+
+<script>
+  $(document).ready(function () {
+      $('#url').click(function () {
+          var div =document.getElementById("div");
+          var msj =document.getElementById("msj");
+
+          div.setAttribute("class", "form-group");
+          if (msj!=null)
+              msj.innerHTML="";
+      });
+  });
+</script>
