Primer version de formulario para agregar un template

--- a/app/views/collections/index.html.erb
+++ b/app/views/collections/index.html.erb
@@ -3,7 +3,7 @@
     <div class="col-xs-12">
       <div class="table-container">
         <h1>
-          <%= link_to 'collections/new' do%>
+          <%= link_to 'new' do%>
               <span class='large-text glyphicon glyphicon-plus table-add-button pull-left'>  </span>
           <% end %>
           <%= t('collections.header') %></h1>
