--- a/app/views/collections/_innerform.erb
+++ b/app/views/collections/_innerform.erb
@@ -20,5 +20,19 @@
     </div>
   </div>
 
+  <div class="row">
+    <div class="form-group col-xs-8">
+      <%= m.label t('collections.new.templates.template'), class: "control-label" %>
+
+      <%= select_tag(:templates, options_from_collection_for_select(@templates, :id, :title), :multiple => false,
+                     class: "chzn-select", 'data-placeholder'=> t('collections.new.templates.select'), 'style'=> 'width:100%') %>
+
+    </div>
+    <div class="form-group col-xs-4">
+      <%= m.label t('collections.new.templates.days'), class: "control-label" %>
+      <%= number_field_tag 'days', 0, in: 0...5000 %>
+    </div>
+  </div>
+
   <%= m.button t('collections.new.submit'), :type => 'submit', class: "btn btn-default" %>
 </div>
