Arreglado bug en ordenar milestones y projects

--- a/app/assets/javascripts/milestonefilters.js.erb
+++ b/app/assets/javascripts/milestonefilters.js.erb
@@ -44,6 +44,7 @@ var milestonefilters_ready = function() {
     );
     var tabla = $('#hitos').DataTable({
         paging: false,
+        order: [],
         "columnDefs": [
             { "width": "30px", "targets": 'status_col' }
         ],
