--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -105,6 +105,7 @@
 
         $(".datatable:not(#hitos)").DataTable({
             paging: false,
+            order: [],
             "language": {
                 "search": ""
             }
