--- a/app/assets/stylesheets/_milestones.scss.erb
+++ b/app/assets/stylesheets/_milestones.scss.erb
@@ -20,6 +20,13 @@
         font-size: 14px;
     }
 
+    .highlight {
+      position: absolute;
+      top: 15px;
+      right: 35px;
+      font-size: 14px;
+    }
+
     .left-pane {
         flex: 1 0 0;
         width: 33.3%;
