--- a/app/views/milestones/show.html.erb
+++ b/app/views/milestones/show.html.erb
@@ -12,10 +12,37 @@
       <%= render 'info' %>
     </div>
 
+
     <div class="row">
       <div class="card-col col-xs-5">
         <div id="milestone-notes">
-          <h4><%=t('notes.add')%>:</h4>
+          <h4 class="text-center"><%=t(:attachmentsdocs)%></h4>
+          <hr>
+          <ul>
+              <%@milestone.resources.each do |r|%>
+                  <li class="clearfix">
+                    <h2>
+                      <span class="glyphicon glyphicon glyphicon-paperclip"></span>
+                      &nbsp;&nbsp;
+                      <%=link_to r.title.truncate(60), r.url, :target => "_blank"%>
+                    </h2>
+                  </li>
+              <%end%>
+          </ul>
+          <%if @milestone.resources.empty?%>
+                <p class="text-center">
+                  <small>
+                    <%= t(:nonattachmentsdocs) %>
+                  </small>
+                </p>
+          <%end%>
+          <hr>
+        </div>
+      </div>
+
+      <div class="card-col col-xs-5">
+        <div id="milestone-notes">
+          <h4 class="text-center"><%=t('notes.header')%></h4>
           <hr>
           <%= render 'notes/form' %>
           <%= render 'notes' %>
