--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -11,10 +11,14 @@
 
 
         <% if current_user_admin? %>
+            <button class="slide-form-button" data-rel="from-collection-form" data-toggle="tooltip" title="Crear hitos desde coleccion">
+              <span class="glyphicon glyphicon-briefcase"></span>
+            </button>
             <button class="slide-form-button" data-rel="from-template-form" data-toggle="tooltip" title="Crear hito desde template">
               <span class="glyphicon glyphicon-star"></span>
             </button>
         <%end%>
+
 
         <%if can_view_person?(@identifier) %>
             <button class="slide-form-button" data-rel="new-milestone-form" data-toggle="tooltip" title="Crear hito">
@@ -38,6 +42,7 @@
       <%end%>
       <% if current_user_admin? %>
           <%= render 'templates/generate' %>
+          <%= render 'collections/generate' %>
       <%end%>
 
       <div id="timeline-container">
