--- a/app/views/milestones/index.html.erb
+++ b/app/views/milestones/index.html.erb
@@ -71,10 +71,17 @@
         <% @milestone.each do |m| %>
             <tr>
               <td><% if can_modify_milestone?m.id %>
+                    <%= milestone_highlight(m, :static)%>
                     <%= milestone_status_rej(m,:static) %>
                     <%= if m.status != 'rejected'
                           milestone_status(m,:static)
                         end %>
+                  <%else%>
+                    <% if m.highlighted %>
+                      <span class="milestone-highlight static true"></span>
+                    <%else%>
+                      <span class="milestone-highlight static false"></span>
+                    <%end%>
                 <% end %>
               </td>
               <% if (m.status == 'rejected') || (m.status == 'done')  %>
