--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -71,23 +71,23 @@
 .milestone-highlight {
   position: absolute;
   top: -10px;
-  left: 75px;
+  left: 15px;
   width: 30px;
   height: 30px;
   background-position: left;
   background-size: contain;
 
   &.true {
-    background-image: image-url('layouts/highlighted-star.png');
+    background-image: image-url('layouts/star_full.png');
   }
 
   &.false {
-    background-image: image-url('layouts/highlight-star_empty.png');
+    background-image: image-url('layouts/star_empty.png');
   }
 
   &.right {
     left: auto;
-    right: 75px;
+    right: 15px;
   }
 
   &.small {
@@ -105,7 +105,7 @@
 .milestone-status {
     position: absolute;
     top: -10px;
-    left: 45px;
+    left: 75px;
     width: 30px;
     height: 30px;
     background-position: left;
@@ -125,7 +125,7 @@
 
     &.right {
         left: auto;
-        right: 45px;
+        right: 75px;
     }
 
     &.small {
@@ -142,7 +142,7 @@
 .milestone-rej-status {
     position: absolute;
     top: -10px;
-    left: 15px;
+    left: 45px;
     width: 30px;
     height: 30px;
     background-size: contain;
@@ -161,7 +161,7 @@
 
     &.right {
         left: auto;
-        right: 15px;
+        right: 45px;
     }
 
     &.small {
