--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -44,7 +44,7 @@
                                     method: :delete,
                                     data: { confirm: t('project.delete.sure') } do %>
 
-                          <span class='large-text glyphicon glyphicon-remove'></span>
+                          <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
                     </td>
                 <% end %>
