--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -40,7 +40,7 @@
                     <td><%= link_to categories_destroy_path(category_id: c.id),
                                     data: { confirm: t('categories.delete.sure') } do %>
 
-                          <span class='large-text glyphicon glyphicon-remove'></span>
+                          <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
                     </td>
                 <% end %>
