--- a/app/views/milestones/edit.html.erb
+++ b/app/views/milestones/edit.html.erb
@@ -3,7 +3,7 @@
     <div class="card-col col-xs-4 col-xs-offset-4">
 
       <%= form_for @milestone, html: { class:'main-form','data-toggle': 'validator'} do |f| %>
-          <h1><%= t('milestones.edit.header') %></h1>
+          <h1><span class="glyphicon glyphicon-check"></span> <%= t('milestones.edit.header') %></h1>
 
           <div class="form-group">
             <%= f.label t('milestones.title'), class: "control-label" %>
