--- a/app/views/tech_roles/index.html.erb
+++ b/app/views/tech_roles/index.html.erb
@@ -35,7 +35,7 @@
                     <td><%= link_to tech_role_path(t),
                                     method: :delete,
                                     data: { confirm: t('tech_roles.delete.sure') } do %>
-                          <span class='large-text glyphicon glyphicon-remove'></span>
+                          <span class='large-text glyphicon glyphicon-trash'></span>
                       <% end %>
                     </td>
                 <%else%>
