--- a/app/views/tags/index.html.erb
+++ b/app/views/tags/index.html.erb
@@ -32,7 +32,7 @@
                 <td><%= link_to tag_path(t),
                                 method: :delete,
                                 data: { confirm: t('tags.delete.sure') } do %>
-                      <span class='large-text glyphicon glyphicon-remove'></span>
+                      <span class='large-text glyphicon glyphicon-trash'></span>
                   <% end %>
                 </td>
 
