--- a/app/views/people/_timeline_card.erb
+++ b/app/views/people/_timeline_card.erb
@@ -1,3 +1,9 @@
+<style>
+  h2 {
+    position: relative;
+    left: 30px;
+  }
+</style>
 <% if @milestones and not @milestones.empty? %>
     <div id="timeline-card" class="card timeline">
       <ul id="milestone-list">
@@ -12,24 +18,35 @@
             <div class="row">
               <div class="col-xs-10">
                 <%if e.pending?%>
+                  <% if can_modify_milestone?e.id %>
+                      <%= milestone_highlight(e)%>
+                  <%else%>
+                    <% if e.highlighted %>
+                      <span class="milestone-highlight true"></span>
+                    <%else%>
+                      <span class="milestone-highlight false"></span>
+                    <%end%>
+                  <%end%>
                     <h2><%=link_to e.title, e, method: :get%></h2>
                 <%else%>
+                    <% if can_modify_milestone?e.id %>
+                      <%= milestone_highlight(e)%>
+                    <%else%>
+                      <% if e.highlighted %>
+                        <span class="milestone-highlight true"></span>
+                      <%else%>
+                        <span class="milestone-highlight false"></span>
+                      <%end%>
+                    <%end%>
                     <strike><h2><%=link_to e.title, e, method: :get%></h2></strike>
                 <%end%>
               </div>
               <div class="col-xs-2">
                 <% if can_modify_milestone?e.id %>
-                    <%= milestone_highlight(e, :right)%>
                     <%= if e.status != 'rejected'
                           milestone_status(e,:right)
                         end %>
                     <%= milestone_status_rej(e, :right) %>
-                <%else%>
-                  <% if e.highlighted %>
-                      <span class="milestone-highlight right true"></span>
-                  <%else%>
-                      <span class="milestone-highlight right false"></span>
-                  <%end%>
                 <%end%>
               </div>
             </div>
