--- a/app/assets/stylesheets/_general.scss.erb
+++ b/app/assets/stylesheets/_general.scss.erb
@@ -71,7 +71,7 @@
 .milestone-highlight {
   position: absolute;
   top: -10px;
-  left: 15px;
+  left: 75px;
   width: 30px;
   height: 30px;
   background-position: left;
@@ -100,7 +100,38 @@
     display: block;
   }
 }
+.milestone-highlight2 {
+  position: absolute;
+  top: -2px;
+  left: 15px;
+  width: 20px;
+  height: 20px;
+  background-position: left;
+  background-size: contain;
 
+  &.true {
+    background-image: image-url('layouts/star_full.png');
+  }
+
+  &.false {
+    background-image: image-url('layouts/star_empty.png');
+  }
+
+  &.right {
+    left: auto;
+    right: 15px;
+  }
+
+  &.small {
+    width: 25px;
+    height: 25px;
+  }
+
+  &.static {
+    position: static;
+    display: block;
+  }
+}
 
 .milestone-status {
     position: absolute;
